poke/testsuite/poke.pkl/and-diag-1.pk
/* { dg-do compile } */

defvar a = 929991111111 && "foo"; /* { dg-error "" } */
